# css-colors-stats

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deployment.yml  python-publish.yml
css_colors_stats/: __init__.py  core.py  html.py  parser.py
tests/: test_core.py  test_parser.py
